--- a/components/responsive-register-form.html
+++ b/components/responsive-register-form.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Responsive register form with TailwindCSS</title>
+        <title>Formulaire d'inscription responsive avec Tailwind CSS</title>
 
         <!-- Tailwind CSS -->
         <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
@@ -28,7 +28,8 @@
                     <!-- Username -->
                     <div class="pt-3 mb-6 bg-gray-100 rounded-sm">
                         <label class="block mx-3 mb-2 text-xs font-bold text-gray-700 uppercase" for="username">Nom d'utilisateur</label>
-                        <input type="text" 
+                        <input type="text"
+                               name="username" 
                                autofocus   
                                required
                                class="w-full px-3 pb-3 text-sm text-gray-700 transition duration-300 bg-gray-100 border-b-2 border-gray-200 rounded-sm focus:outline-none focus:border-blue-600 hover:border-blue-300">
@@ -38,6 +39,7 @@
                     <div class="pt-3 mb-6 bg-gray-100 rounded-sm">
                         <label class="block mx-3 mb-2 text-xs font-bold text-gray-700 uppercase" for="email">Email</label>
                         <input type="email"
+                               name="email"
                                required
                                class="w-full px-3 pb-3 text-sm text-gray-700 transition duration-300 bg-gray-100 border-b-2 border-gray-200 rounded-sm focus:outline-none focus:border-blue-600 hover:border-blue-300">
                     </div>
@@ -46,6 +48,8 @@
                     <div class="pt-3 mb-6 bg-gray-100 rounded-sm">
                         <label class="block mx-3 mb-2 text-xs font-bold text-gray-700 uppercase" for="password">Mot de passe</label>
                         <input type="password"
+                               name="password"
+                               required
                                class="w-full px-3 pb-3 text-sm text-gray-700 transition duration-300 bg-gray-100 border-b-2 border-gray-200 rounded-sm focus:outline-none focus:border-blue-600 hover:border-blue-300">
                     </div>
 
@@ -53,11 +57,13 @@
                     <div class="pt-3 mb-6 bg-gray-100 rounded-sm">
                         <label class="block mx-3 mb-2 text-xs font-bold text-gray-700 uppercase" for="password-confirmation">Confirmation du mot de passe</label>
                         <input type="password"
+                               name="password-confirmation"
+                               required
                                class="w-full px-3 pb-3 text-sm text-gray-700 transition duration-300 bg-gray-100 border-b-2 border-gray-200 rounded-sm focus:outline-none focus:border-blue-600 hover:border-blue-300">
                     </div>
 
-                    <button class="p-6 mb-4 text-xs font-bold text-white uppercase transition duration-300 bg-blue-600 rounded-sm shadow-sm hover:bg-blue-900 hover:shadow-md"
-                            type="submit">
+                    <button type="submit" 
+                            class="p-6 mb-4 text-xs font-bold text-white uppercase transition duration-300 bg-blue-600 rounded-sm shadow-sm hover:bg-blue-900 hover:shadow-md">
                         Terminer l'inscription
                     </button>
                 </form>
