--- a/components/responsive-register-form.html
+++ b/components/responsive-register-form.html
@@ -37,7 +37,7 @@
 
                     <!-- Email -->
                     <div class="pt-3 mb-6 bg-gray-100 rounded-sm">
-                        <label class="block mx-3 mb-2 text-xs font-bold text-gray-700 uppercase" for="email">Email</label>
+                        <label class="block mx-3 mb-2 text-xs font-bold text-gray-700 uppercase" for="email">Adresse email</label>
                         <input type="email"
                                name="email"
                                required
