--- a/components/register-form.html
+++ b/components/register-form.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Formulaire d'inscription responsive avec Tailwind CSS</title>
+        <title>Register form with Tailwind CSS</title>
 
         <!-- Tailwind CSS -->
         <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
@@ -17,9 +17,9 @@
     <body class="min-h-screen antialiased bg-gray-200" style="font-family: 'Montserrat';">
         <main class="max-w-lg p-8 mx-2 mt-12 bg-white rounded-sm shadow-sm md:mx-auto">
             <section class="pt-2 pb-4">
-                <h1 class="text-xl font-extrabold uppercase">Créer un compte</h1>
+                <h1 class="text-xl font-extrabold uppercase">Create an account</h1>
                 <p class="text-sm text-gray-400   ">
-                    La créativité, c'est l'intelligence qui s'amuse.
+                    Creativity is intelligence having fun. 
                 </p>
             </section>
 
@@ -27,7 +27,7 @@
                 <form class="flex flex-col" method="POST" action="#">
                     <!-- Username -->
                     <div class="pt-3 mb-6 bg-gray-100 rounded-sm">
-                        <label class="block mx-3 mb-2 text-xs font-bold text-gray-700 uppercase" for="username">Nom d'utilisateur</label>
+                        <label class="block mx-3 mb-2 text-xs font-bold text-gray-700 uppercase" for="username">Username</label>
                         <input type="text"
                                name="username" 
                                autofocus   
@@ -37,7 +37,7 @@
 
                     <!-- Email -->
                     <div class="pt-3 mb-6 bg-gray-100 rounded-sm">
-                        <label class="block mx-3 mb-2 text-xs font-bold text-gray-700 uppercase" for="email">Adresse email</label>
+                        <label class="block mx-3 mb-2 text-xs font-bold text-gray-700 uppercase" for="email">Email</label>
                         <input type="email"
                                name="email"
                                required
@@ -46,7 +46,7 @@
 
                     <!-- Password -->
                     <div class="pt-3 mb-6 bg-gray-100 rounded-sm">
-                        <label class="block mx-3 mb-2 text-xs font-bold text-gray-700 uppercase" for="password">Mot de passe</label>
+                        <label class="block mx-3 mb-2 text-xs font-bold text-gray-700 uppercase" for="password">Password</label>
                         <input type="password"
                                name="password"
                                required
@@ -55,7 +55,7 @@
 
                     <!-- Confirm Password  -->
                     <div class="pt-3 mb-6 bg-gray-100 rounded-sm">
-                        <label class="block mx-3 mb-2 text-xs font-bold text-gray-700 uppercase" for="password-confirmation">Confirmation du mot de passe</label>
+                        <label class="block mx-3 mb-2 text-xs font-bold text-gray-700 uppercase" for="password-confirmation">Password confirmation</label>
                         <input type="password"
                                name="password-confirmation"
                                required
@@ -63,8 +63,8 @@
                     </div>
 
                     <button type="submit" 
-                            class="p-6 mb-4 text-xs font-bold text-white uppercase transition duration-300 bg-blue-600 rounded-sm shadow-sm hover:bg-blue-900 hover:shadow-md">
-                        Terminer l'inscription
+                            class="p-6 mb-4 text-sm font-bold text-white uppercase transition duration-300 bg-blue-600 rounded-sm shadow-sm hover:bg-blue-900 hover:shadow-md">
+                        Register
                     </button>
                 </form>
             </section>
