--- a/components/flash-success.html
+++ b/components/flash-success.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Flash info with Tailwind CSS & AlpineJS</title>
+        <title>Flash success with Tailwind CSS & AlpineJS</title>
 
         <!-- Tailwind CSS -->
         <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
@@ -21,7 +21,7 @@
         <div x-data="{ open: false }">
             <!-- Flash message: closed by default -->
             <template x-if="open">
-                <div class="fixed top-20 left-1/2 transform -translate-x-1/2 w-full max-w-lg bg-white border-yellow-300 border shadow-md"
+                <div class="fixed top-20 left-1/2 transform -translate-x-1/2 w-full max-w-lg bg-white border-green-300 border shadow-md"
                      x-transition:enter="transition ease-out duration-300"
                      x-transition:enter-start="opacity-0 translate-y-16"
                      x-transition:enter-end="opacity-100 translate-y-0"
@@ -31,7 +31,7 @@
                 >
                     <div class="flex">
                         <div class="py-6 pl-6">
-                            <h2 class="mb-2 font-extrabold text-md">Help</h2>
+                            <h2 class="mb-2 font-extrabold text-md">Success</h2>
                             <p class="text-xs text-justify">
                                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam quas cupiditate, 
                                 error quasi eum ea, recusandae voluptatibus harum porro libero animi quam.
@@ -41,7 +41,7 @@
                             <svg xmlns="http://www.w3.org/2000/svg" 
                                  viewBox="0 0 512 512" 
                                  height="16" 
-                                 class="fill-current cursor-pointer text-gray-600 hover:text-yellow-600 transition duration-300 ease-out"
+                                 class="fill-current cursor-pointer text-gray-600 hover:text-green-600 transition duration-300 ease-out"
                                  @click="open = false"
                             >
                                 <!-- Font Awesome Free 5.15.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) -->
@@ -55,7 +55,7 @@
             <div class="flex flex-col h-screen">      
                 <div class="bg-white m-auto p-8 shadow-md">
                     <!-- Title -->
-                    <h1 class="text-lg font-extrabold mt-4">Flash message : INFO</h1>
+                    <h1 class="text-lg font-extrabold mt-4">Flash message : SUCCESS</h1>
                     <h2 class="text-sm text-gray-400 mb-8">Alpine JS & Tailwind CSS</h1>
 
                     <!-- Button displaying the flash message -->
