--- a/components/alert-success.html
+++ b/components/alert-success.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Flash success with Tailwind CSS & AlpineJS</title>
+        <title>Alert: Success, with Tailwind CSS & AlpineJS</title>
 
         <!-- Tailwind CSS -->
         <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
@@ -19,9 +19,9 @@
 
     <body class="antialiased bg-gray-200 min-h-screen" style="font-family: 'Montserrat';"> 
         <div x-data="{ open: false }">
-            <!-- Flash message: closed by default -->
+            <!-- Alert : Closed by default -->
             <template x-if="open">
-                <div class="fixed top-20 left-1/2 transform -translate-x-1/2 w-full max-w-lg bg-white border-green-300 border shadow-md"
+                <div class="fixed top-20 left-1/2 transform -translate-x-1/2 w-full max-w-lg bg-white border-green-300 border shadow-md rounded-sm"
                      x-transition:enter="transition ease-out duration-300"
                      x-transition:enter-start="opacity-0 translate-y-16"
                      x-transition:enter-end="opacity-100 translate-y-0"
@@ -30,8 +30,8 @@
                      x-transition:leave-end="opacity-0 translate-y-16"
                 >
                     <div class="flex">
-                        <div class="py-6 pl-6">
-                            <h2 class="mb-2 font-extrabold text-md">Success</h2>
+                        <div class="py-6 pl-6 flex-1">
+                            <h2 class="mb-2 font-extrabold text-md uppercase">Success</h2>
                             <p class="text-xs text-justify">
                                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam quas cupiditate, 
                                 error quasi eum ea, recusandae voluptatibus harum porro libero animi quam.
@@ -55,7 +55,7 @@
             <div class="flex flex-col h-screen">      
                 <div class="bg-white m-auto p-8 shadow-md">
                     <!-- Title -->
-                    <h1 class="text-lg font-extrabold mt-4">Flash message : SUCCESS</h1>
+                    <h1 class="text-lg font-extrabold mt-4">Alert: Success</h1>
                     <h2 class="text-sm text-gray-400 mb-8">Alpine JS & Tailwind CSS</h1>
 
                     <!-- Button displaying the flash message -->
