--- a/components/navbar.html
+++ b/components/navbar.html
@@ -18,10 +18,18 @@
     </head>
 
     <body class="antialiased bg-gray-200" style="font-family: 'Montserrat';"> 
-        <nav class="fixed top-0 w-full bg-white shadow-md">
-            <div x-data="{ hamburgerOpen: false, profileOpen: false }"
-                 class="max-w-5xl p-4 mx-auto md:px-0 md:flex md:justify-between md:items-center">
-        
+        <nav class="fixed top-0 w-full bg-white shadow-md" 
+             x-data="navbar()" 
+             x-show="isNavbarVisible"
+             @scroll.window="navbarVisibility()"
+             x-transition:enter="transition ease-out duration-300"
+             x-transition:enter-start="transform -translate-y-16"
+             x-transition:enter-end="transform translate-y-0"
+             x-transition:leave="transition ease-in duration-300"
+             x-transition:leave-start="transform translate-y-0"
+             x-transition:leave-end="transform -translate-y-16"
+        >
+            <div class="max-w-5xl p-4 mx-auto md:px-0 md:flex md:justify-between md:items-center">
                 <div class="flex items-center justify-between">
                     <!-- Brand -->
                     <a href="/"
@@ -37,7 +45,7 @@
         
                     <!-- Mobile: Hamburger -->
                     <div class="flex md:hidden">
-                        <button type="button" class="focus:outline-none" @click="hamburgerOpen = ! hamburgerOpen">
+                        <button type="button" class="focus:outline-none" @click="isHamburgerOpen = ! isHamburgerOpen">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"
                                  class="w-5 text-gray-400 transition duration-500 ease-out fill-current hover:text-black">
                                 <!-- Font Awesome Free 5.15.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) -->
@@ -48,7 +56,7 @@
                 </div>
         
                 <!-- Menu, if mobile set to hidden -->
-                <div :class="hamburgerOpen ? 'show' : 'hidden'" class="items-center md:flex">
+                <div :class="isHamburgerOpen ? 'show' : 'hidden'" class="items-center md:flex">
                     <div class="flex flex-col items-end md:flex-row md:ml-6 md:items-center">
                         <a href="#" class="mt-4 text-xs font-semibold text-gray-900 uppercase transition duration-200 ease-out md:mx-4 md:mt-0 font-montserrat hover:text-gray-400">
                             Articles
@@ -69,8 +77,20 @@
             </div>
         </nav>
 
-        <main class="max-w-5xl bg-white rounded-sm mt-36 mb-20 p-20 mx-auto shadow-sm leading-loose">
+        <main class="max-w-5xl bg-white rounded-sm mt-36 mb-20 p-10 md:p-20 mx-auto shadow-sm leading-loose">
             <p class="text-sm text-justify mb-10 leading-relaxed">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mollis lobortis facilisis. 
+                Donec pharetra sodales felis. Curabitur convallis tortor erat, in imperdiet mi feugiat et. 
+                Nunc efficitur rhoncus nulla, non congue libero gravida et. Vivamus venenatis turpis consectetur auctor porta. 
+                Quisque venenatis feugiat elit, nec sollicitudin massa bibendum sit amet. 
+                Integer eget elit viverra, pellentesque neque et, sollicitudin velit.
+            </p>
+            <p class="text-sm text-justify mb-10 leading-relaxed">
+                Sed dapibus porttitor ultricies. In euismod diam a ante pulvinar, nec mollis risus mollis. Nunc semper, purus et vestibulum ullamcorper, 
+                libero urna venenatis erat, egestas pharetra odio leo vitae diam. Pellentesque porta at lectus a fermentum. 
+                Vestibulum id tortor eget dolor pellentesque euismod et sit amet nisl. 
+                Cras tincidunt ipsum non nisi interdum, ac tincidunt leo molestie. 
+                Nunc ut est viverra, tristique nisl sit amet, suscipit sem. Vestibulum consequat quam vitae turpis interdum semper id nec ex.
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mollis lobortis facilisis. 
                 Donec pharetra sodales felis. Curabitur convallis tortor erat, in imperdiet mi feugiat et. 
                 Nunc efficitur rhoncus nulla, non congue libero gravida et. Vivamus venenatis turpis consectetur auctor porta. 
@@ -97,29 +117,13 @@
                 Vestibulum id tortor eget dolor pellentesque euismod et sit amet nisl. 
                 Cras tincidunt ipsum non nisi interdum, ac tincidunt leo molestie. 
                 Nunc ut est viverra, tristique nisl sit amet, suscipit sem. Vestibulum consequat quam vitae turpis interdum semper id nec ex.
-            </p>
-            <p class="text-sm text-justify mb-10 leading-relaxed">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mollis lobortis facilisis. 
-                Donec pharetra sodales felis. Curabitur convallis tortor erat, in imperdiet mi feugiat et. 
-                Nunc efficitur rhoncus nulla, non congue libero gravida et. Vivamus venenatis turpis consectetur auctor porta. 
-                Quisque venenatis feugiat elit, nec sollicitudin massa bibendum sit amet. 
-                Integer eget elit viverra, pellentesque neque et, sollicitudin velit.
-            </p>
-            <p class="text-sm text-justify mb-10 leading-relaxed">
-                Sed dapibus porttitor ultricies. In euismod diam a ante pulvinar, nec mollis risus mollis. Nunc semper, purus et vestibulum ullamcorper, 
-                libero urna venenatis erat, egestas pharetra odio leo vitae diam. Pellentesque porta at lectus a fermentum. 
-                Vestibulum id tortor eget dolor pellentesque euismod et sit amet nisl. 
-                Cras tincidunt ipsum non nisi interdum, ac tincidunt leo molestie. 
-                Nunc ut est viverra, tristique nisl sit amet, suscipit sem. Vestibulum consequat quam vitae turpis interdum semper id nec ex.
-            </p>
-            <p class="text-sm text-justify mb-10 leading-relaxed">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mollis lobortis facilisis. 
-                Donec pharetra sodales felis. Curabitur convallis tortor erat, in imperdiet mi feugiat et. 
-                Nunc efficitur rhoncus nulla, non congue libero gravida et. Vivamus venenatis turpis consectetur auctor porta. 
-                Quisque venenatis feugiat elit, nec sollicitudin massa bibendum sit amet. 
-                Integer eget elit viverra, pellentesque neque et, sollicitudin velit.
             </p>
             <p class="text-sm text-justify leading-relaxed">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. In mollis lobortis facilisis. 
+                Donec pharetra sodales felis. Curabitur convallis tortor erat, in imperdiet mi feugiat et. 
+                Nunc efficitur rhoncus nulla, non congue libero gravida et. Vivamus venenatis turpis consectetur auctor porta. 
+                Quisque venenatis feugiat elit, nec sollicitudin massa bibendum sit amet. 
+                Integer eget elit viverra, pellentesque neque et, sollicitudin velit.
                 Sed dapibus porttitor ultricies. In euismod diam a ante pulvinar, nec mollis risus mollis. Nunc semper, purus et vestibulum ullamcorper, 
                 libero urna venenatis erat, egestas pharetra odio leo vitae diam. Pellentesque porta at lectus a fermentum. 
                 Vestibulum id tortor eget dolor pellentesque euismod et sit amet nisl. 
@@ -127,6 +131,30 @@
                 Nunc ut est viverra, tristique nisl sit amet, suscipit sem. Vestibulum consequat quam vitae turpis interdum semper id nec ex.
             </p>
         </main>
+
+        <script>
+            function navbar() {
+                
+                return {
+
+                    isNavbarVisible: true,
+
+                    isHamburgerOpen: false,
+
+                    isUserMenuVisible: false,
+
+                    pageYOffset: window.pageYOffset,
+
+                    navbarVisibility() {
+                        this.isNavbarVisible = (this.pageYOffset > window.pageYOffset);
+                        this.pageYOffset = window.pageYOffset;
+                    }
+
+                }
+
+            } 
+        </script>
+
     </body>
 
 </html>
