feat: navbar component

--- a/components/navbar.html
+++ b/components/navbar.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Responsive Navbar, with Tailwind CSS & AlpineJS</title>
+        <title>Navbar, with Tailwind CSS & AlpineJS</title>
 
         <!-- Tailwind CSS -->
         <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
@@ -20,16 +20,16 @@
     <body class="antialiased bg-gray-200" style="font-family: 'Montserrat';"> 
         <nav class="fixed top-0 w-full bg-white shadow-md" 
              x-data="navbar()" 
-             x-show="isNavbarVisible"
              @scroll.window="navbarVisibility()"
+             x-show="isNavbarVisible"
              x-transition:enter="transition ease-out duration-300"
-             x-transition:enter-start="transform -translate-y-16"
+             x-transition:enter-start="transform -translate-y-48 md:-translate-y-16"
              x-transition:enter-end="transform translate-y-0"
              x-transition:leave="transition ease-in duration-300"
              x-transition:leave-start="transform translate-y-0"
-             x-transition:leave-end="transform -translate-y-16"
+             x-transition:leave-end="transform -translate-y-48 md:-translate-y-16"
         >
-            <div class="max-w-5xl p-4 mx-auto md:px-0 md:flex md:justify-between md:items-center">
+            <div class="relative max-w-5xl p-4 mx-auto md:px-0 md:flex md:justify-between md:items-center">
                 <div class="flex items-center justify-between">
                     <!-- Brand -->
                     <a href="/"
@@ -45,7 +45,7 @@
         
                     <!-- Mobile: Hamburger -->
                     <div class="flex md:hidden">
-                        <button type="button" class="focus:outline-none" @click="isHamburgerOpen = ! isHamburgerOpen">
+                        <button type="button" class="focus:outline-none" @click="isHamburgerMenuVisible = ! isHamburgerMenuVisible">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"
                                  class="w-5 text-gray-400 transition duration-500 ease-out fill-current hover:text-black">
                                 <!-- Font Awesome Free 5.15.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) -->
@@ -56,22 +56,68 @@
                 </div>
         
                 <!-- Menu, if mobile set to hidden -->
-                <div :class="isHamburgerOpen ? 'show' : 'hidden'" class="items-center md:flex">
+                <div :class="isHamburgerMenuVisible ? 'show' : 'hidden'" class="items-center md:flex">
                     <div class="flex flex-col items-end md:flex-row md:ml-6 md:items-center">
                         <a href="#" class="mt-4 text-xs font-semibold text-gray-900 uppercase transition duration-200 ease-out md:mx-4 md:mt-0 font-montserrat hover:text-gray-400">
                             Articles
                         </a>
                         <a href="#" class="mt-4 text-xs font-semibold text-gray-900 uppercase transition duration-200 ease-out md:mx-4 md:mt-0 font-montserrat hover:text-gray-400">
-                            Creations
+                            About
                         </a>
                         <a href="#" class="mt-4 text-xs font-semibold text-gray-900 uppercase transition duration-200 ease-out md:mx-4 md:mt-0 font-montserrat hover:text-gray-400">
-                           A propos
+                            Contact
                         </a>
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512"
-                             class="mt-4 w-5 text-gray-400 transition duration-500 ease-out fill-current hover:text-black cursor-pointer md:ml-2 md:mt-0">
-                             <!-- Font Awesome Free 5.15.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) -->
-                             <path d="M248 8C111 8 0 119 0 256s111 248 248 248 248-111 248-248S385 8 248 8zm0 96c48.6 0 88 39.4 88 88s-39.4 88-88 88-88-39.4-88-88 39.4-88 88-88zm0 344c-58.7 0-111.3-26.6-146.5-68.2 18.8-35.4 55.6-59.8 98.5-59.8 2.4 0 4.8.4 7.1 1.1 13 4.2 26.6 6.9 40.9 6.9 14.3 0 28-2.7 40.9-6.9 2.3-.7 4.7-1.1 7.1-1.1 42.9 0 79.7 24.4 98.5 59.8C359.3 421.4 306.7 448 248 448z"/>
-                        </svg>
+                        <button type="button" 
+                                class="focus:outline-none"
+                                @click="isUserMenuVisible = ! isUserMenuVisible"
+                                @click.away="isUserMenuVisible = false"
+                        >
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512"
+                                 class="mt-4 w-5 text-gray-400 transition duration-500 ease-out fill-current hover:text-black cursor-pointer md:ml-2 md:mt-0"  
+                            >
+                                <!-- Font Awesome Free 5.15.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) -->
+                                <path d="M248 8C111 8 0 119 0 256s111 248 248 248 248-111 248-248S385 8 248 8zm0 96c48.6 0 88 39.4 88 88s-39.4 88-88 88-88-39.4-88-88 39.4-88 88-88zm0 344c-58.7 0-111.3-26.6-146.5-68.2 18.8-35.4 55.6-59.8 98.5-59.8 2.4 0 4.8.4 7.1 1.1 13 4.2 26.6 6.9 40.9 6.9 14.3 0 28-2.7 40.9-6.9 2.3-.7 4.7-1.1 7.1-1.1 42.9 0 79.7 24.4 98.5 59.8C359.3 421.4 306.7 448 248 448z"/>
+                            </svg>
+                        </button>
+
+                        <!-- User Menu -->
+                        <div class="absolute top-44 md:top-12 right-4 md:right-0 bg-white rounded-sm py-2 shadow-md border border-gray-200 mt-2 md:mt-0"
+                             x-show="isUserMenuVisible"
+                             x-transition:enter="transition ease-out duration-300"
+                             x-transition:enter-start="opacity-0 transform -translate-y-48 md:-translate-y-32"
+                             x-transition:enter-end="opacity-100 transform translate-y-0"
+                             x-transition:leave="transition ease-in duration-300"
+                             x-transition:leave-start="opacity-100 transform translate-y-0"
+                             x-transition:leave-end="opacity-0 transform -translate-y-48 md:-translate-y-32"       
+                        >
+                            <a href="#" class="flex hover:bg-gray-200 py-3 px-6 items-center">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"
+                                     class="w-3 text-gray-400 mr-3"
+                                >
+                                    <!-- Font Awesome Free 5.15.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) -->
+                                    <path d="M224 256c70.7 0 128-57.3 128-128S294.7 0 224 0 96 57.3 96 128s57.3 128 128 128zm89.6 32h-16.7c-22.2 10.2-46.9 16-72.9 16s-50.6-5.8-72.9-16h-16.7C60.2 288 0 348.2 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-74.2-60.2-134.4-134.4-134.4z"/>
+                                </svg>
+                                <div class="text-xs">My account</div>
+                            </a>
+                            <a href="#" class="flex hover:bg-gray-200 text-sm py-3 px-6">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"
+                                     class="w-3 text-gray-400 mr-3"
+                                >
+                                    <!-- Font Awesome Free 5.15.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) -->
+                                    <path d="M487.4 315.7l-42.6-24.6c4.3-23.2 4.3-47 0-70.2l42.6-24.6c4.9-2.8 7.1-8.6 5.5-14-11.1-35.6-30-67.8-54.7-94.6-3.8-4.1-10-5.1-14.8-2.3L380.8 110c-17.9-15.4-38.5-27.3-60.8-35.1V25.8c0-5.6-3.9-10.5-9.4-11.7-36.7-8.2-74.3-7.8-109.2 0-5.5 1.2-9.4 6.1-9.4 11.7V75c-22.2 7.9-42.8 19.8-60.8 35.1L88.7 85.5c-4.9-2.8-11-1.9-14.8 2.3-24.7 26.7-43.6 58.9-54.7 94.6-1.7 5.4.6 11.2 5.5 14L67.3 221c-4.3 23.2-4.3 47 0 70.2l-42.6 24.6c-4.9 2.8-7.1 8.6-5.5 14 11.1 35.6 30 67.8 54.7 94.6 3.8 4.1 10 5.1 14.8 2.3l42.6-24.6c17.9 15.4 38.5 27.3 60.8 35.1v49.2c0 5.6 3.9 10.5 9.4 11.7 36.7 8.2 74.3 7.8 109.2 0 5.5-1.2 9.4-6.1 9.4-11.7v-49.2c22.2-7.9 42.8-19.8 60.8-35.1l42.6 24.6c4.9 2.8 11 1.9 14.8-2.3 24.7-26.7 43.6-58.9 54.7-94.6 1.5-5.5-.7-11.3-5.6-14.1zM256 336c-44.1 0-80-35.9-80-80s35.9-80 80-80 80 35.9 80 80-35.9 80-80 80z"/>
+                                </svg>
+                                <div class="text-xs">Settings</div>
+                            </a>
+                            <a href="#" class="flex hover:bg-gray-200 text-sm py-3 px-6">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"
+                                     class="w-3 text-gray-400 mr-3"
+                                >
+                                    <!-- Font Awesome Free 5.15.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License) -->
+                                    <path d="M497 273L329 441c-15 15-41 4.5-41-17v-96H152c-13.3 0-24-10.7-24-24v-96c0-13.3 10.7-24 24-24h136V88c0-21.4 25.9-32 41-17l168 168c9.3 9.4 9.3 24.6 0 34zM192 436v-40c0-6.6-5.4-12-12-12H96c-17.7 0-32-14.3-32-32V160c0-17.7 14.3-32 32-32h84c6.6 0 12-5.4 12-12V76c0-6.6-5.4-12-12-12H96c-53 0-96 43-96 96v192c0 53 43 96 96 96h84c6.6 0 12-5.4 12-12z"/>
+                                </svg>
+                                <div class="text-xs">Logout</div>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -139,7 +185,7 @@
 
                     isNavbarVisible: true,
 
-                    isHamburgerOpen: false,
+                    isHamburgerMenuVisible: false,
 
                     isUserMenuVisible: false,
 
@@ -148,6 +194,8 @@
                     navbarVisibility() {
                         this.isNavbarVisible = (this.pageYOffset > window.pageYOffset);
                         this.pageYOffset = window.pageYOffset;
+                        
+                        if (this.isNavbarVisible === false) this.isUserMenuVisible = false;
                     }
 
                 }
