--- a/components/navbar.html
+++ b/components/navbar.html
@@ -28,7 +28,9 @@
              x-transition:leave-start="transform translate-y-0"
              x-transition:leave-end="transform -translate-y-48 md:-translate-y-16"
         >
-            <div class="relative max-w-5xl p-4 mx-auto md:px-0 md:flex md:justify-between md:items-center">
+            <div class="relative max-w-5xl p-4 mx-auto md:px-0 md:flex md:justify-between md:items-center" 
+                 @click.away="isHamburgerMenuVisible = false"
+            >
                 <div class="flex items-center justify-between">
                     <!-- Brand -->
                     <a href="/"
