fix: title of landing page

--- a/components/landing.html
+++ b/components/landing.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Navbar, with Tailwind CSS & AlpineJS</title>
+        <title>Landing page, with Tailwind CSS & AlpineJS</title>
 
         <!-- Fonts -->
         <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -134,7 +134,7 @@
             <!-- Hero section -->
             <div class="relative top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 w-9/12 lg:w-3/5 lg:max-w-5xl rounded-sm pt-6">
                 <div class="p-8 bg-black bg-opacity-60">
-                    <h1 class="text-white font-bold text-3xl mb-2 uppercase">Coding & Digital Painting</h1>
+                    <h1 class="text-white font-bold text-3xl uppercase">Coding & Digital Painting</h1>
                     <h2 class="text-gray-400 text-md mb-8 uppercase font-bold">Welcome to my world</h2>
                     <p class="text-white text-md text-justify mb-8">
                         Web enthusiast and found of digital creations, i spend my free time coding, practicing digital painting and doing some fun stuff. 
