ui: card article in progress

--- a/components/card-article.html
+++ b/components/card-article.html
@@ -17,17 +17,19 @@
 </head>
 
 <body class="antialiased bg-gray-200" style="font-family: 'Montserrat';">
-    <!-- TODO: Nice use a flexbox to center a div (login forms) -->
-    <div class="flex h-screen items-center justify-center">
-        <div class="flex flex-col bg-white rounded-sm overflow-hidden">
-            <img src="https://picsum.photos/id/237/400/250" alt="">
-            <h4 class="mx-6 mt-6 font-bold">Title</h4>
-            <p class="mx-6 mb-6 text-xs">Category / Subtitle</p>
-            <p></p>
 
+    <div class="flex h-screen items-center justify-center">
+        <div class="flex flex-col bg-white w-1/5 rounded-sm overflow-hidden shadow-md">
+            <img src="https://picsum.photos/seed/picsum/300/250" alt="">
+            
+            <h4 class="mx-8 mt-8 font-bold text-xl">Laravel 8</h4>
+            <p class="mx-8 mb-8 text-xs uppercase font-bold text-gray-400">Route Caching</p>
+            <!-- <span class="mx-8 mb-8 text-xs text-blue-600">#php #laravel #news #backend</span> -->
+            <p class="mx-8 mb-8 text-xs text-justify leading-relaxed">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod ipsa et totam praesentium laborum! Nam sunt facilis et, voluptatum omnis, impedit officia obcaecati optio eaque voluptas exercitationem harum, ab unde?</p>
+            <p class="mx-8 mb-8 text-xs text-right italic text-gray-400">Written by @sylent, 2 hours ago</p>
         </div>
     </div>
 
-    
+    <!-- Date + nombre de commentaire + author + reading time -->
 </body>
 </html>
