--- a/components/alert-error.html
+++ b/components/alert-error.html
@@ -6,6 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Alert: Error, with Tailwind CSS & AlpineJS</title>
 
+        <!-- Favicon -->
+        <link rel="icon" type="image/png" href="../img/favicon.png" />
+
         <!-- Tailwind CSS -->
         <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 
@@ -52,8 +55,8 @@
                 </div>
             </template>
 
-            <div class="flex flex-col h-screen">      
-                <div class="bg-white m-auto p-8 shadow-md">
+            <div class="flex flex-col h-screen justify-center items-center">      
+                <div class="bg-white p-8 shadow-md">
                     <!-- Title -->
                     <h1 class="text-lg font-extrabold mt-4">Alert: Error</h1>
                     <h2 class="text-sm text-gray-400 mb-8">Alpine JS & Tailwind CSS</h1>
