--- a/components/checkbox.html
+++ b/components/checkbox.html
@@ -5,7 +5,10 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>Simple checkbox styling with Tailwind CSS & Alpine JS</title>
+        <title>Simple checkbox with Tailwind CSS & Alpine JS</title>
+
+        <!-- Favicon -->
+        <link rel="icon" type="image/png" href="../img/favicon.png" />
 
         <!-- Tailwind CSS -->
         <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
@@ -19,10 +22,10 @@
     </head>
 
     <body class="antialiased bg-gray-200 min-h-screen" style="font-family: 'Montserrat';">
-        <div class="flex flex-col h-screen">      
-            <div class="bg-white m-auto p-8 shadow-md">
+        <div class="flex flex-col h-screen items-center justify-center">      
+            <div class="bg-white p-8 shadow-md">
                 <!-- Title -->
-                <h1 class="text-lg font-extrabold mt-4">Simple checkbox styling</h1>
+                <h1 class="text-lg font-extrabold mt-4">Simple checkbox</h1>
                 <h2 class="text-sm text-gray-400 mb-8">Alpine JS & Tailwind CSS</h1>
 
                 <!-- Remember Me -->
