--- a/components/landing.html
+++ b/components/landing.html
@@ -5,6 +5,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Landing page, with Tailwind CSS & AlpineJS</title>
 
+        <!-- Favicon -->
+        <link rel="icon" type="image/png" href="../img/favicon.png" />
+
         <!-- Fonts -->
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700;800;900&display=swap" rel="stylesheet">
@@ -18,24 +21,20 @@
     </head>
 
     <body class="antialiased bg-white-200" style="font-family: 'Montserrat';"> 
-
         <!-- Hero Banner -->
-        <div class="relative w-full bg-no-repeat bg-cover bg-center shadow-md" style="background-image: url('../img/hero-banner.png'); height:100vh;">
+        <div class="w-full bg-no-repeat bg-cover bg-center shadow-md h-screen" style="background-image: url('../img/hero-banner.png');">
             <!-- Navbar-->
             <nav class="fixed top-0 w-full z-50"
-            
-                x-data="navbar()" 
-                @scroll.window="navbarVisibility()"
-                x-show="isNavbarVisible"
-                x-transition:enter="transition ease-out duration-300"
-                x-transition:enter-start="transform -translate-y-48 md:-translate-y-16"
-                x-transition:enter-end="transform translate-y-0"
-                x-transition:leave="transition ease-in duration-300"
-                x-transition:leave-start="transform translate-y-0"
-                x-transition:leave-end="transform -translate-y-48 md:-translate-y-16"
+                 x-data="{ isHamburgerMenuVisible: false, isUserMenuVisible: false }" 
+                 x-transition:enter="transition ease-out duration-300"
+                 x-transition:enter-start="transform -translate-y-48 md:-translate-y-16"
+                 x-transition:enter-end="transform translate-y-0"
+                 x-transition:leave="transition ease-in duration-300"
+                 x-transition:leave-start="transform translate-y-0"
+                 x-transition:leave-end="transform -translate-y-48 md:-translate-y-16"
             >
                 <div class="relative max-w-5xl p-4 mx-auto xl:px-0 md:flex md:justify-between md:items-center" 
-                     :class="isHamburgerMenuVisible ? 'bg-black' : 'bg-none'"
+                     :class="isHamburgerMenuVisible ? 'bg-black bg-opacity-80' : 'bg-none'"
                      @click.away="isHamburgerMenuVisible = false"
                 >
                     <div class="flex items-center justify-between">
@@ -64,7 +63,7 @@
                     </div>
             
                     <!-- Menu, if mobile set to hidden -->
-                    <div :class="isHamburgerMenuVisible ? 'show' : 'hidden'" class="items-center md:flex" style="z-index: 2;">
+                    <div :class="isHamburgerMenuVisible ? 'show' : 'hidden'" class="items-center md:flex">
                         <div class="flex flex-col items-end md:flex-row md:ml-6 md:items-center">
                             <a href="#" class="mt-4 text-white text-xs font-semibold uppercase transition duration-200 ease-out md:mx-4 md:mt-0 font-montserrat hover:text-gray-400">
                                 Articles
@@ -89,14 +88,14 @@
                             </button>
 
                             <!-- User Menu -->
-                            <div class="absolute top-44 md:top-12 right-4 md:right-0 bg-white rounded-sm py-2 shadow-md mt-2 md:mt-0"
-                                x-show="isUserMenuVisible"
-                                x-transition:enter="transition ease-out duration-300"
-                                x-transition:enter-start="opacity-0 transform -translate-y-48 md:-translate-y-32"
-                                x-transition:enter-end="opacity-100 transform translate-y-0"
-                                x-transition:leave="transition ease-in duration-300"
-                                x-transition:leave-start="opacity-100 transform translate-y-0"
-                                x-transition:leave-end="opacity-0 transform -translate-y-48 md:-translate-y-32"       
+                            <div class="absolute top-44 md:top-16 right-4 md:right-0 bg-white rounded-sm py-2 shadow-md mt-2 md:mt-0"
+                                 x-show="isUserMenuVisible"
+                                 x-transition:enter="transition ease-out duration-300"
+                                 x-transition:enter-start="opacity-0 transform -translate-y-48 md:-translate-y-32"
+                                 x-transition:enter-end="opacity-100 transform translate-y-0"
+                                 x-transition:leave="transition ease-in duration-300"
+                                 x-transition:leave-start="opacity-100 transform translate-y-0"
+                                 x-transition:leave-end="opacity-0 transform -translate-y-48 md:-translate-y-32"       
                             >
                                 <a href="#" class="flex items-center hover:bg-gray-200 py-3 px-6">
                                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"
@@ -132,8 +131,8 @@
             </nav>
              
             <!-- Hero section -->
-            <div class="relative top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 w-9/12 lg:w-3/5 lg:max-w-5xl rounded-sm pt-6">
-                <div class="p-8 bg-black bg-opacity-60">
+            <div class="flex h-screen justify-center items-center">
+                <div class="p-8 bg-black bg-opacity-60 rounded-sm w-9/12 lg:w-3/5 lg:max-w-5xl pt-6">
                     <h1 class="text-white font-bold text-3xl uppercase">Coding & Digital Painting</h1>
                     <h2 class="text-gray-400 text-md mb-8 uppercase font-bold">Welcome to my world</h2>
                     <p class="text-white text-md text-justify mb-8">
@@ -200,24 +199,6 @@
                 </div>
             </div>
         </div>
-
-        <script>
-            function navbar() {
-                return {
-                    isNavbarVisible: true,
-                    isHamburgerMenuVisible: false,
-                    isUserMenuVisible: false,
-
-                    pageYOffset: window.pageYOffset,
-
-                    navbarVisibility() {
-                        // this.isNavbarVisible = (this.pageYOffset > window.pageYOffset);
-                        // this.pageYOffset = window.pageYOffset;
-                        
-                        if (this.isNavbarVisible === false) this.isUserMenuVisible = false;
-                    }
-                }
-            } 
-        </script>
     </body>
+
 </html>
