--- a/components/login-form.html
+++ b/components/login-form.html
@@ -7,6 +7,9 @@
 
         <title>Login form with Tailwind CSS & AlpineJS</title>
 
+        <!-- Favicon -->
+        <link rel="icon" type="image/png" href="../img/favicon.png" />
+
         <!-- Tailwind CSS -->
         <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 
@@ -18,70 +21,74 @@
         <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
     </head>
 
-    <body class="antialiased bg-gray-200" style="font-family: 'Montserrat';">
-        <main class="max-w-lg p-8 mx-2 mt-12 bg-white rounded-sm shadow-sm md:mx-auto">
-            <section class="pt-2 pb-4">
-                <h1 class="text-xl font-extrabold uppercase font-montserrat">Login</h1>
-                <p class="text-sm text-gray-400 font-montserrat">
-                    The creative adult is the child who survived.
-                </p>
-            </section>
+    <body class="antialiased bg-gray-200 min-h-screen" style="font-family: 'Montserrat';">
+        <div class="flex justify-center items-center h-screen">
+            <div class="flex-1 max-w-lg p-8 mx-2 bg-white rounded-sm shadow-md">
+                <section class="pt-2 pb-4">
+                    <h1 class="text-xl font-extrabold uppercase font-montserrat">Login</h1>
+                    <p class="text-sm text-gray-400 font-montserrat">
+                        The creative adult is the child who survived.
+                    </p>
+                </section>
 
-            <section class="mt-6">
-                <form class="flex flex-col" method="POST" action="#">
-                    <!-- Username -->
-                    <div class="pt-3 mb-6 bg-gray-100 rounded-sm">
-                        <label class="block mx-3 mb-2 text-xs font-bold text-gray-700 uppercase font-montserrat" for="username">
-                            Username
-                        </label>
-                        <input type="text" 
-                               id="username" 
-                               name="username" 
-                               autofocus
-                               required
-                               class="w-full px-3 pb-3 text-sm text-gray-700 transition duration-300 bg-gray-100 border-b-2 border-gray-200 rounded-sm font-montserrat focus:outline-none focus:border-blue-600 hover:border-blue-300">
-                    </div>
-
-                    <!-- Password -->
-                    <div class="pt-3 mb-6 bg-gray-100 rounded-sm">
-                        <label class="block mx-3 mb-2 text-xs font-bold text-gray-700 uppercase font-montserrat" for="password">
-                            Password
-                        </label>
-                        <input type="password" 
-                               id="password" 
-                               name="password" 
-                               required
-                               class="w-full px-3 pb-3 text-sm text-gray-700 transition duration-300 bg-gray-100 border-b-2 border-gray-200 rounded-sm font-montserrat focus:outline-none focus:border-blue-600 hover:border-blue-300">
-                    </div>
-
-                    <div class="flex justify-between">
-                        <!-- Remember Me -->
-                        <div x-data="{ checked: false }" class="mb-6">
-                            <label for="remember_me">
-                                <input type="checkbox" id="remember_me" name="remember" class="hidden" x-bind:checked="checked">
-                                <div class="flex cursor-pointer" @click="checked = ! checked">
-                                    <!-- Checkbox -->
-                                    <div :class="checked ? 'bg-blue-600' : 'bg-gray-200'" class="w-4 h-4 mr-3 rounded-sm"></div>
-                                    <span class="text-xs font-bold text-gray-600 transition duration-300 font-montserrat">
-                                        Stay connected
-                                    </span>
-                                </div>
+                <section class="mt-6">
+                    <form class="flex flex-col" method="POST" action="#">
+                        <!-- Username -->
+                        <div class="pt-3 mb-6 bg-gray-100 rounded-sm">
+                            <label class="block mx-3 mb-2 text-xs font-bold text-gray-700 uppercase font-montserrat" for="username">
+                                Username
                             </label>
+                            <input type="text" 
+                                   id="username" 
+                                   name="username" 
+                                   autofocus
+                                   required
+                                   class="w-full px-3 pb-3 text-sm text-gray-700 transition duration-300 bg-gray-100 border-b-2 border-gray-200 rounded-sm font-montserrat focus:outline-none focus:border-blue-600 hover:border-blue-300"
+                            />
                         </div>
 
-                        <!-- Forgot your password -->
-                        <a href="#" class="text-xs font-bold text-gray-600 transition duration-300 cursor-pointer font-montserrat hover:text-gray-400">
-                            Forgot password?
-                        </a>
-                    </div>
+                        <!-- Password -->
+                        <div class="pt-3 mb-6 bg-gray-100 rounded-sm">
+                            <label class="block mx-3 mb-2 text-xs font-bold text-gray-700 uppercase font-montserrat" for="password">
+                                Password
+                            </label>
+                            <input type="password" 
+                                   id="password" 
+                                   name="password" 
+                                   required
+                                   class="w-full px-3 pb-3 text-sm text-gray-700 transition duration-300 bg-gray-100 border-b-2 border-gray-200 rounded-sm font-montserrat focus:outline-none focus:border-blue-600 hover:border-blue-300"
+                            />
+                        </div>
 
-                    <button type="submit" 
-                            class="p-6 mb-4 text-sm font-bold text-white uppercase transition duration-300 bg-blue-600 rounded-sm shadow-sm font-montserrat focus:outline-none hover:bg-blue-900 hover:shadow-md">
-                        Login
-                    </button>
-                </form>
-            </section>
-        </main>
+                        <div class="flex justify-between">
+                            <!-- Remember Me -->
+                            <div x-data="{ checked: false }" class="mb-6">
+                                <label for="remember_me">
+                                    <input type="checkbox" id="remember_me" name="remember" class="hidden" x-bind:checked="checked">
+                                    <div class="flex cursor-pointer" @click="checked = ! checked">
+                                        <!-- Checkbox -->
+                                        <div :class="checked ? 'bg-blue-600' : 'bg-gray-200'" class="w-4 h-4 mr-3 rounded-sm"></div>
+                                        <span class="text-xs font-bold text-gray-600 transition duration-300 font-montserrat">
+                                            Stay connected
+                                        </span>
+                                    </div>
+                                </label>
+                            </div>
+
+                            <!-- Forgot your password -->
+                            <a href="#" class="text-xs font-bold text-gray-600 transition duration-300 cursor-pointer font-montserrat hover:text-gray-400">
+                                Forgot password?
+                            </a>
+                        </div>
+
+                        <button type="submit" 
+                                class="p-6 mb-4 text-sm font-bold text-white uppercase transition duration-300 bg-blue-600 rounded-sm shadow-sm font-montserrat focus:outline-none hover:bg-blue-900 hover:shadow-md">
+                            Login
+                        </button>
+                    </form>
+                </section>
+            </div>
+        </div>
     </body>
 
 </html>
