--- a/components/register-form.html
+++ b/components/register-form.html
@@ -6,6 +6,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Register form with Tailwind CSS</title>
 
+        <!-- Favicon -->
+        <link rel="icon" type="image/png" href="../img/favicon.png" />
+
+
         <!-- Tailwind CSS -->
         <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
 
@@ -15,60 +19,66 @@
     </head>
 
     <body class="min-h-screen antialiased bg-gray-200" style="font-family: 'Montserrat';">
-        <main class="max-w-lg p-8 mx-2 mt-12 bg-white rounded-sm shadow-sm md:mx-auto">
-            <section class="pt-2 pb-4">
-                <h1 class="text-xl font-extrabold uppercase">Create an account</h1>
-                <p class="text-sm text-gray-400   ">
-                    Creativity is intelligence having fun. 
-                </p>
-            </section>
+        <div class="flex justify-center items-center h-screen">
+            <div class="flex-1 max-w-lg p-8 mx-2 bg-white rounded-sm shadow-md">
+                <section class="pt-2 pb-4">
+                    <h1 class="text-xl font-extrabold uppercase">Create an account</h1>
+                    <p class="text-sm text-gray-400   ">
+                        Creativity is intelligence having fun. 
+                    </p>
+                </section>
 
-            <section class="mt-6">
-                <form class="flex flex-col" method="POST" action="#">
-                    <!-- Username -->
-                    <div class="pt-3 mb-6 bg-gray-100 rounded-sm">
-                        <label class="block mx-3 mb-2 text-xs font-bold text-gray-700 uppercase" for="username">Username</label>
-                        <input type="text"
-                               name="username" 
-                               autofocus   
-                               required
-                               class="w-full px-3 pb-3 text-sm text-gray-700 transition duration-300 bg-gray-100 border-b-2 border-gray-200 rounded-sm focus:outline-none focus:border-blue-600 hover:border-blue-300">
-                    </div>
+                <section class="mt-6">
+                    <form class="flex flex-col" method="POST" action="#">
+                        <!-- Username -->
+                        <div class="pt-3 mb-6 bg-gray-100 rounded-sm">
+                            <label class="block mx-3 mb-2 text-xs font-bold text-gray-700 uppercase" for="username">Username</label>
+                            <input type="text"
+                                   name="username" 
+                                   autofocus   
+                                   required
+                                   class="w-full px-3 pb-3 text-sm text-gray-700 transition duration-300 bg-gray-100 border-b-2 border-gray-200 rounded-sm focus:outline-none focus:border-blue-600 hover:border-blue-300"
+                            />
+                        </div>
 
-                    <!-- Email -->
-                    <div class="pt-3 mb-6 bg-gray-100 rounded-sm">
-                        <label class="block mx-3 mb-2 text-xs font-bold text-gray-700 uppercase" for="email">Email</label>
-                        <input type="email"
-                               name="email"
-                               required
-                               class="w-full px-3 pb-3 text-sm text-gray-700 transition duration-300 bg-gray-100 border-b-2 border-gray-200 rounded-sm focus:outline-none focus:border-blue-600 hover:border-blue-300">
-                    </div>
+                        <!-- Email -->
+                        <div class="pt-3 mb-6 bg-gray-100 rounded-sm">
+                            <label class="block mx-3 mb-2 text-xs font-bold text-gray-700 uppercase" for="email">Email</label>
+                            <input type="email"
+                                   name="email"
+                                   required
+                                   class="w-full px-3 pb-3 text-sm text-gray-700 transition duration-300 bg-gray-100 border-b-2 border-gray-200 rounded-sm focus:outline-none focus:border-blue-600 hover:border-blue-300"
+                            />
+                        </div>
 
-                    <!-- Password -->
-                    <div class="pt-3 mb-6 bg-gray-100 rounded-sm">
-                        <label class="block mx-3 mb-2 text-xs font-bold text-gray-700 uppercase" for="password">Password</label>
-                        <input type="password"
-                               name="password"
-                               required
-                               class="w-full px-3 pb-3 text-sm text-gray-700 transition duration-300 bg-gray-100 border-b-2 border-gray-200 rounded-sm focus:outline-none focus:border-blue-600 hover:border-blue-300">
-                    </div>
+                        <!-- Password -->
+                        <div class="pt-3 mb-6 bg-gray-100 rounded-sm">
+                            <label class="block mx-3 mb-2 text-xs font-bold text-gray-700 uppercase" for="password">Password</label>
+                            <input type="password"
+                                   name="password"
+                                   required
+                                   class="w-full px-3 pb-3 text-sm text-gray-700 transition duration-300 bg-gray-100 border-b-2 border-gray-200 rounded-sm focus:outline-none focus:border-blue-600 hover:border-blue-300"
+                            />
+                        </div>
 
-                    <!-- Confirm Password  -->
-                    <div class="pt-3 mb-6 bg-gray-100 rounded-sm">
-                        <label class="block mx-3 mb-2 text-xs font-bold text-gray-700 uppercase" for="password-confirmation">Password confirmation</label>
-                        <input type="password"
-                               name="password-confirmation"
-                               required
-                               class="w-full px-3 pb-3 text-sm text-gray-700 transition duration-300 bg-gray-100 border-b-2 border-gray-200 rounded-sm focus:outline-none focus:border-blue-600 hover:border-blue-300">
-                    </div>
+                        <!-- Confirm Password  -->
+                        <div class="pt-3 mb-6 bg-gray-100 rounded-sm">
+                            <label class="block mx-3 mb-2 text-xs font-bold text-gray-700 uppercase" for="password-confirmation">Password confirmation</label>
+                            <input type="password"
+                                   name="password-confirmation"
+                                   required
+                                   class="w-full px-3 pb-3 text-sm text-gray-700 transition duration-300 bg-gray-100 border-b-2 border-gray-200 rounded-sm focus:outline-none focus:border-blue-600 hover:border-blue-300"
+                            />
+                        </div>
 
-                    <button type="submit" 
-                            class="p-6 mb-4 text-sm font-bold text-white uppercase transition duration-300 bg-blue-600 rounded-sm shadow-sm hover:bg-blue-900 hover:shadow-md">
-                        Register
-                    </button>
-                </form>
-            </section>
-        </main>
+                        <button type="submit" 
+                                class="p-6 mb-4 text-sm font-bold text-white uppercase transition duration-300 bg-blue-600 rounded-sm shadow-sm hover:bg-blue-900 hover:shadow-md">
+                            Register
+                        </button>
+                    </form>
+                </section>
+            </div>
+        </div>
     </body>
 
 </html>
